--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "Treasure Chest Game",
+  "name": "treasure_chest_game",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
